[package]
name = "spacebots"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
warp = "0.3.7"
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros"] }
serde_json = "1.0.116"
serde = { version = "1.0.199", features = ["derive"] }
futures-util = "0.3.30"
tungstenite = "0.21.0"

[workspace]
resolver = "2"