[package]
name = "spacebots"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
warp = "0.3.7"
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3.30"
tungstenite = "0.21.0"
piston = "1.0.0"
piston2d-graphics = "0.44.0"
piston2d-opengl_graphics = "0.85.0"
piston_window = "0.132.0"
conrod = "0.62.1"
conrod_piston = "0.76.1"

[workspace]
resolver = "2"